# Datascience

./: CollabNoteBook  EDA Template.ipynb  Git Setup & Workflow Cheat Sheet.md  Seaborn.ipynb
.ipynb_checkpoints/: Seaborn-checkpoint.ipynb
Titanic EDA/: Makefile  README.md  pyproject.toml
Titanic EDA/docs/: mkdocs.yml
Titanic EDA/docs/docs/: index.md
Titanic EDA/notebooks/: Titanic.ipynb
housing_prices/: Makefile  README.md  pyproject.toml
housing_prices/docs/: mkdocs.yml
housing_prices/docs/docs/: index.md
housing_prices/notebooks/: Housing Prices v1.ipynb  Housing Prices.ipynb  HousingRefer.ipynb  Scratch.ipynb  features.csv
