[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_prices"
version = "0.0.1"
description = "Housing price prediction"
authors = [
  { name = "Saidul" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["housing_prices"]
include = ["pyproject.toml", "housing_prices/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["housing_prices"]
force-sort-within-sections = true

